# Skills

./: .gitignore  check_eastmoney_fields.py  data_from_sina.json  启动基金数据获取工具.bat  快速获取基金数据.bat
.claude/: settings.local.json
fund_scraper_mcp/: .gitignore  README.md  browser_manager.py  debug_000001.html  debug_better_selectors.py  debug_extraction.py  debug_page.py  fetch_funds.py  fetch_funds_fast.py  fund_scraper_gui.py  pyproject.toml  requirements.txt  server.py  test_20_funds.json  test_20_funds.py  test_api.py  test_fast.py  test_fetch_all.py  test_scraper.py  使用说明.txt  启动基金数据获取工具.bat
fund_scraper_mcp/scrapers/: __init__.py  base_scraper.py  eastmoney_scraper.py
fund_scraper_mcp/utils/: __init__.py  anti_detection.py
plans/: funds_skill.md
test_funds/: README_基金数据获取.md  analyze_sina_data.py  check_data.py  compare_data_sources.py  compare_datasources.py  compare_eastmoney_akshare.py  explore_akshare_fund_apis.py  explore_akshare_missing_fields.py  final_data_comparison.py  fix_sina_data.py  get_complete_fund_data.py  get_funds_akshare.py  get_funds_akshare_combined.py  get_funds_akshare_full.py  get_funds_eastmoney.py  get_sina_funds.py  get_sina_simple.py  get_tt_fund_data.py  old_code.py  quick_validate.py  random_sample_comparison.py  requirements.txt  sina_funds_data.csv  test.py  test_akshare.py  test_akshare_combine.py  test_akshare_complete.py  test_akshare_found_apis.py  test_alternative_sources.py  test_sina_fund.py  validate_sina_data.py  verify_calculations.py
